@@ -7,9 +7,9 @@ import gg.projecteden.nexus.framework.commands.models.annotations.Permission;
 import gg.projecteden.nexus.framework.commands.models.annotations.Redirects.Redirect;
 import gg.projecteden.nexus.framework.commands.models.events.CommandEvent;
 import gg.projecteden.nexus.utils.LuckPermsUtils.PermissionChange;
+import gg.projecteden.nexus.utils.LuckPermsUtils.PermissionChange.PermissionChangeBuilder;
 import lombok.NonNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Fallback("premiumvanish")
@@ -38,23 +38,23 @@ public class VanishCommand extends CustomCommand {
 		runCommand("vanish on");
 	}
 
-	private static final List<String> interact_permissions = Arrays.asList("pv.interact", "pv.useblocks",
-			"pv.damage", "pv.breakblocks", "pv.placeblocks", "pv.dropitems");
+	private static final List<String> INTERACT_PERMISSIONS = List.of(
+		"pv.interact",
+		"pv.useblocks",
+		"pv.damage",
+		"pv.breakblocks",
+		"pv.placeblocks",
+		"pv.dropitems"
+	);
 
 	@Path("(ni|nointeract)")
 	@Permission("pv.use")
 	void toggleInteract() {
-		if (player().hasPermission(interact_permissions.get(0))) {
-			for (String perm : interact_permissions)
-				PermissionChange.unset().uuid(uuid()).permission(perm).runAsync();
+		final boolean disabling = player().hasPermission(INTERACT_PERMISSIONS.get(0));
+		final PermissionChangeBuilder change = disabling ? PermissionChange.unset() : PermissionChange.set();
 
-			send(PREFIX + "Interaction disabled");
-		} else {
-			for (String perm : interact_permissions)
-				PermissionChange.set().uuid(uuid()).permission(perm).runAsync();
-
-			send(PREFIX + "Interaction enabled");
-		}
+		change.uuid(uuid()).permissions(INTERACT_PERMISSIONS).runAsync().thenRun(() ->
+			send(PREFIX + "Interaction " + (disabling ? "&cdisabled" : "&aenabled")));
 	}
 
 	@Path("(np|nopickup)")
